--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A static javascript based application built on a node server, routed through Express.js",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/bwynn/waves_js#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bower": "^1.8.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7"
